# Personal-Task-Chatbot

./: .gitignore  main.py  my_flow_schema_structure.html  pyproject.toml
Agentic_Workflow/: __init__.py  async_flow_v1.py
Agentic_Workflow/Character_Chatbot/: __init__.py  personal_task_chatbot.py
Agentic_Workflow/Character_Chatbot/Memory_Context_Layer/: __init__.py  memory_context_engine.py
Agentic_Workflow/Character_Chatbot/Personality_Context_Layer/: __init__.py  hybrid_ingestion.py  personality_rag_engine.py
Agentic_Workflow/Character_Chatbot/Personality_Context_Layer/personality_source/: fionica.yaml
Agentic_Workflow/Character_Chatbot/Router_Context_Layer/: router_logic_engine.py
Agentic_Workflow/dumps_of_other_stuffs/: async_flow_v2.py  baby_fionica_collections_free.py  mock_query_personality.py
Agentic_Workflow/dumps_of_other_stuffs/mock_folder_personality_ingestion/: zilliz_cloud_hybrid_vector.py
flows_temporary_for_integration/: __init__.py  flow_async.py
flows_temporary_for_integration/crews/: __init__.py  mio_ikari_crew.py  temporary_storage_for_crew.py
flows_temporary_for_integration/tools/: __init__.py  rag_tool_for_crew_ai.py
flows_temporary_for_integration/vector_stores/: __init__.py  mio_ikari_persona_store.py
