[project]
name = "agentic-personal-task"
version = "0.1.0"
description = """Make an ai system that saves your schedule and is able to
    automatically sends you email or in chat """
requires-python = ">=3.11"
dependencies = [
    "onnxruntime==1.22.0",
    "crewai==0.121.0",
    "crewai-tools>=0.44.0",
    "docx2txt>=0.9",
    "llama-index==0.12.37",
    "flagembedding>=1.3.4",
    "sentencepiece>=0.2.0",
    "llama-index-embeddings-huggingface>=0.5.4",
    "llama-index-llms-groq>=0.3.1",
    "llama-index-vector-stores-milvus>=0.8.2",
    "llama-index-memory-mem0>=0.3.1",
    "groq>=0.25.0",
    "langchain>=0.3.25",
    "langchain-groq>=0.3.2",
    "fastapi>=0.115.12",
    "llama-index-vector-stores-faiss>=0.4.0",
    "faiss-cpu>=1.11.0",
]

